# tt

./: .gitignore  Cargo.toml  README.md  flake.nix  main.gs
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
src/: main.rs
