[package]
name = "tt"
version = "1.0.1"
edition = "2021"

[dependencies]
chrono = "0.4.37"
serde = "1.0.197"
serde_derive = "1.0.197"
confy = "0.6.1"
reqwest = { version = "0.12.3", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
percent-encoding = "2.3.1"
serde_json = "1.0.115"
directories = "5.0.1"
rand = "0.8.5"
clap = { version = "4.5.4", features = ["derive"] }
