[package]
name = "tt"
version = "2.3.2"
edition = "2021"
license = "MIT"

[dependencies]
chrono = "0.4.37"
serde = "1.0.217"
serde_derive = "1.0.217"
confy = "0.6.1"
reqwest = { version = "0.12.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32.0", features = ["bundled"] }
percent-encoding = "2.3.1"
serde_json = "1.0.138"
directories = "5.0.1"
rand = "0.8.5"
clap = { version = "4.5.4", features = ["derive"] }
indicatif = "0.17.8"
env_logger = "0.11.5"
log = "0.4.22"
